--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "carbon-components-react": "5.34.0",
     "carbon-icons": "6.3.2",
     "react": "16.2.0",
-    "react-dom": "16.2.0",
+    "react-dom": "16.2.1"
     "react-scripts": "1.1.0"
   },
   "devDependencies": {},
